<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/activity_main"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	tools:context="com.zzc2422.date_calculator.ui.MainActivity"
	android:fillViewport="true">

	<LinearLayout
		android:orientation="vertical"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_weight="1"
			android:text="@string/inputDate1Info" />

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/editTextDate1"
			android:gravity="center"
			android:numeric="integer"
			android:maxLength="8"
			android:layout_weight="1"
			android:hint="@string/date1Default" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_weight="1"
			android:text="@string/inputDate2Info" />

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/editTextDate2"
			android:gravity="center"
			android:numeric="integer"
			android:maxLength="8"
			android:layout_weight="1"
			android:hint="@string/date2Default" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:layout_weight="1"
			android:text="@string/inputGapDaysInfo" />

		<EditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/editTextDaysAmount"
			android:gravity="center"
			android:numeric="integer"
			android:maxLength="6"
			android:layout_weight="1"
			android:hint="@string/daysAmountDefault" />

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/buttonCalculateDaysBetweenDates"
			android:gravity="center"
			android:layout_weight="1"
			android:text="@string/calculateGapDaysInfo" />

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/buttonCalculateDateDaysAfterDate1"
			android:gravity="center"
			android:layout_weight="1"
			android:text="@string/calculateDateDaysAfterInfo" />

		<Button
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:id="@+id/buttonCalculateDateDaysBeforeDate2"
			android:gravity="center"
			android:layout_weight="1"
			android:text="@string/calculateDateDaysABeforeInfo" />

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:id="@+id/textViewResult"
			android:layout_weight="1" />

	</LinearLayout>
</ScrollView>